--- a/src/app/components/price-btn/price-btn.component.html
+++ b/src/app/components/price-btn/price-btn.component.html
@@ -1,52 +1,26 @@
 <!-- Normal Price -->
 @if (data.current_price == data.full_price) {
-<div class="flex gap-4 items-center">
-  <div>
-    <p class="text-lg font-medium">$ {{ data.current_price }}</p>
-  </div>
-</div>
-}
-
-<!-- Discount Price -->
-@if (data.current_price < data.full_price && data.discount_date == undefined) {
-<div class="flex gap-4 items-center">
-  <div class="p-2 px-4 bg-acc-green text-bg font-medium text-lg rounded">
-    -{{ discountValue }}%
-  </div>
-  <div class="flex flex-col">
-    <div class="text-bg-hover relative font-medium -mb-2">
-      <div
-        class="absolute top-0 bottom-0 m-auto h-[1px] w-full bg-bg-hover"
-      ></div>
-      $ {{ data.full_price }}
-    </div>
-    <div class="text-lg font-medium text-acc-green">
-      $ {{ data.current_price }}
+  <div class="flex items-center gap-4">
+    <div>
+      <p class="text-lg font-medium">$ {{ data.current_price }}</p>
     </div>
   </div>
-</div>
-}
-
-<!-- Dated Discount Price -->
-@if (data.current_price < data.full_price && data.discount_date !== undefined) {
-<div class="flex gap-4 items-center">
-  <div class="text-txt-dim text-sm text-right">
-    <p>Until</p>
-    <p>{{ data.discount_date | date : "LLL dd" }}</p>
-  </div>
-  <div class="p-2 px-4 bg-acc-green text-bg font-medium text-lg rounded">
-    -{{ discountValue }}%
-  </div>
-  <div class="flex flex-col">
-    <div class="text-bg-hover relative font-medium -mb-2">
-      <div
-        class="absolute top-0 bottom-0 m-auto h-[1px] w-full bg-bg-hover"
-      ></div>
-      $ {{ data.full_price }}
+} @else {
+  <!-- Discount Price -->
+  <div class="flex items-center gap-4">
+    <div class="rounded bg-acc-green p-2 px-4 text-lg font-medium text-bg">
+      -{{ discountValue }}%
     </div>
-    <div class="text-lg font-medium text-acc-green">
-      $ {{ data.current_price }}
+    <div class="flex flex-col">
+      <div class="relative -mb-2 font-medium text-bg-hover">
+        <div
+          class="absolute bottom-0 top-0 m-auto h-[1px] w-full bg-bg-hover"
+        ></div>
+        $ {{ data.full_price }}
+      </div>
+      <div class="text-lg font-medium text-acc-green">
+        $ {{ data.current_price }}
+      </div>
     </div>
   </div>
-</div>
 }
