--- a/src/app/pages/store/components/special-offer/game/game.component.html
+++ b/src/app/pages/store/components/special-offer/game/game.component.html
@@ -1,19 +1,19 @@
-<div class="bg-bg p-3 rounded flex flex-col gap-4 md:max-w-sm">
+<div class="flex w-full flex-col gap-4 rounded bg-bg p-3">
   <!-- Image -->
-  <div class="rounded overflow-hidden">
+  <div class="overflow-hidden rounded">
     <img [src]="data.web_assets.capsule_616x353" [alt]="data.store_name" />
   </div>
 
   <!-- Title -->
-  <h3 class="text-xl font-medium h-14">{{ data.store_name }}</h3>
+  <h3 class="h-14 text-xl font-medium">{{ data.store_name }}</h3>
 
   <div class="flex justify-between">
     <!-- Platform -->
     <div class="flex items-center text-txt-dim">
-      <svg-windows8 class="w-5 h-5" />
+      <svg-windows8 class="h-5 w-5" />
     </div>
 
-    <div class="flex gap-4 items-center">
+    <div class="flex items-center gap-4">
       <!-- Price -->
       <app-price-btn-sm [data]="data" />
 
