--- a/src/app/components/price-btn-sm/price-btn-sm.component.html
+++ b/src/app/components/price-btn-sm/price-btn-sm.component.html
@@ -30,12 +30,14 @@
 <!-- Dated Discount Price -->
 @if (data.current_price < data.full_price && data.discount_date !== undefined) {
   <div class="flex items-center gap-4">
-    <div class="text-right text-sm text-txt-dim">
+    <div class="text-right text-sm text-txt-dim max-lg:hidden">
       <p>Until {{ data.discount_date | date: "LLL dd" }}</p>
     </div>
+
     <div class="rounded bg-acc-green p-2 px-4 text-sm font-bold text-bg">
       -{{ discountValue }}%
     </div>
+
     <div class="flex flex-col">
       <div class="relative -mb-2 font-medium text-bg-hover">
         <div
