--- a/src/app/pages/store/pages/home/components/special-offer/special-offer.component.html
+++ b/src/app/pages/store/pages/home/components/special-offer/special-offer.component.html
@@ -26,7 +26,7 @@
     <div class="grid gap-4 md:grid-cols-2 xl:grid-cols-3">
       <app-game class="w-full" [data]="slides[leftSlideIndex]" />
       <app-game class="w-full" [data]="slides[midSlideIndex]" />
-      <app-game class="w-full" [data]="slides[rightSlideIndex]" />
+      <app-game class="w-full max-lg:hidden" [data]="slides[rightSlideIndex]" />
     </div>
 
     <!-- Arrow Foward -->
