--- a/src/app/pages/store/pages/home/home.component.html
+++ b/src/app/pages/store/pages/home/home.component.html
@@ -12,7 +12,7 @@
     />
 
     <!-- Browse Steam -->
-    <!-- TODO -->
+    <app-carousel-categories />
 
     <!-- Free to Play -->
     <app-carousel
@@ -23,7 +23,7 @@
     />
 
     <!-- Recently Updated -->
-    <!-- TODO -->
+    <app-updates />
 
     <!-- New & Trending -->
     <app-carousel
@@ -33,7 +33,7 @@
     />
 
     <!-- Top Sellers -->
-    <!-- TODO -->
+    <app-top-sellers />
 
     <!-- Under $ 5 -->
     <app-carousel
@@ -42,6 +42,7 @@
       class="w-full"
     />
 
-    <!-- Browser -->
+    <!-- Streaming -->
+    <app-streaming />
   </div>
 </div>
