--- a/src/app/pages/store/pages/home/components/carousel-categories/category/category.component.html
+++ b/src/app/pages/store/pages/home/components/carousel-categories/category/category.component.html
@@ -1,11 +1,11 @@
 <a
-  class="group relative z-0 flex w-full flex-col gap-4 overflow-hidden rounded bg-bg"
+  class="group relative z-0 flex w-full flex-col gap-4 overflow-hidden rounded bg-bg max-h-52"
   routerLink="browse/category/{{ data.url }}"
   routerLinkActive="activebutton"
   ariaCurrentWhenActive="page"
 >
   <p
-    class="absolute left-0 top-0 z-20 flex h-full w-full items-center justify-center text-xl font-medium backdrop-blur-[2px] group-hover:backdrop-blur-none"
+    class="absolute left-0 top-0 z-20 flex h-full w-full items-center justify-center text-center text-xl font-medium backdrop-blur-[2px] group-hover:backdrop-blur-none"
     style="
       text-shadow:
         1px 1px 5px black,
