--- a/src/app/pages/store/pages/home/home.component.html
+++ b/src/app/pages/store/pages/home/home.component.html
@@ -12,7 +12,7 @@
     />
 
     <!-- Browse Steam -->
-    <app-carousel-categories />
+    <app-carousel-categories class="w-full" />
 
     <!-- Free to Play -->
     <app-carousel
