--- a/src/app/pages/store/pages/home/components/carousel-categories/carousel-categories.component.html
+++ b/src/app/pages/store/pages/home/components/carousel-categories/carousel-categories.component.html
@@ -19,7 +19,7 @@
     </button>
 
     <!-- Content -->
-    <div class="grid w-full gap-4 md:grid-cols-2 xl:grid-cols-5">
+    <div class="flex w-full gap-4">
       <ng-container *ngFor="let slideGroup of slides; let i = index">
         <ng-container *ngFor="let slide of slideGroup">
           <app-category [data]="slide" [class.hidden]="i !== slideIndex" />
