--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar
-  class="flex h-14 items-center justify-center bg-bg p-2 px-4 pr-6 text-txt"
+  class="sticky top-0 z-50 flex h-14 items-center justify-center bg-bg p-2 px-4 pr-6 text-txt"
 />
 <router-outlet />
