--- a/src/app/pages/store/pages/home/home.component.html
+++ b/src/app/pages/store/pages/home/home.component.html
@@ -23,7 +23,7 @@
     />
 
     <!-- Recently Updated -->
-    <app-updates />
+    <app-news class="w-full" />
 
     <!-- New & Trending -->
     <app-carousel
