--- a/src/app/pages/store/store.component.html
+++ b/src/app/pages/store/store.component.html
@@ -1,2 +1,4 @@
-<app-navibar class="flex justify-center bg-bg-tertiary p-2 px-3 text-txt" />
+<app-navibar
+  class="z-50 sticky top-14 flex justify-center bg-bg-tertiary p-2 px-3 text-txt"
+/>
 <router-outlet />
